Try fix visible list items without hover

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -57,11 +57,11 @@
 
 .list-group,
 .list-tree {
-  li:not(.list-nested-item),
-  li.list-nested-item > .list-item {
-    .text(normal);
-  }
-
+  // li:not(.list-nested-item),
+  // li.list-nested-item > .list-item {
+  //   .text(normal);
+  // }
+  //
   .generate-list-item-text-color(@class) {
     li:not(.list-nested-item).text-@{class},
     li.list-nested-item.text-@{class} > .list-item {
@@ -94,10 +94,10 @@
   .generate-list-item-status-color(@text-color-removed, removed);
   .generate-list-item-status-color(@text-color-renamed, renamed);
 
-  li:not(.list-nested-item).selected,
-  li.list-nested-item.selected > .list-item {
-    .text(selected);
-  }
+  // li:not(.list-nested-item).selected,
+  // li.list-nested-item.selected > .list-item {
+  //   .text(selected);
+  // }
 
   // .no-icon {
   //   padding-left: calc(@ui-padding-icon ~"+" @component-icon-size);
